完成技术设计模块
